--- a/backend/package.json
+++ b/backend/package.json
@@ -16,6 +16,7 @@
     "dotenv": "^8.2.0",
     "esm": "^3.2.25",
     "express": "^4.17.1",
+    "express-validator": "^6.4.0",
     "mongoose": "^5.8.11",
     "multer": "^1.4.2"
   },
